fixed profile photo not showing

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -48,6 +48,7 @@
 }
 
 .card-price-city.profile-bg {
+  background-image: url("@chef.profile_photo.key");
   background-size: cover;
   background-position: center;
 }
